--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,7 @@ spring:
       hibernate: #??? stdout?? ???
         #show_sql: true
         format_sql: true
+        use_sql_comments: true
 
 
 logging.level: #??? logger? ??? ???.
